# source-code-raspberry-pi

./: .gitignore  1_analytics.md  2_mcp-server.md  3_deploy.md  3_deploy.sh  3_deploy_example.sh  README.md
docs/: 1_analytics.html  2_mcp-server.html  3_deploy.html
nas-setup/: NAS.md  config.example.sh  deploy_nas.sh  install_nas.sh
pi_hole_web_survillance/: .gitignore  API.html  API.md  DEPLOYMENT.html  DEPLOYMENT.md  README.html  README.md  apphealth.sh  deploy.sh  dev_setup.py  harden.sh  install.sh  pyproject.toml  requirements.txt  test_locally.sh  update.sh
pi_hole_web_survillance/config/: config.example.yaml
pi_hole_web_survillance/scripts/core/: config.py  constants.py  device_resolver.py  health.py  logging_setup.py  pihole.py  reporter.py  summarizer.py
pi_hole_web_survillance/scripts/data/: analytics.py  downloader.py  fetcher.py
pi_hole_web_survillance/scripts/web/: app.py  auth_helpers.py  extensions.py  templates.py
pi_hole_web_survillance/scripts/web/routes/: api.py  auth.py  pages.py
pi_hole_web_survillance/tests/: test_analytics.py  test_dashboard.py  test_device_resolver.py  test_downloader.py  test_fetcher.py  test_reporter.py  test_routes.py
pihole-mcp-server/: .gitignore  DEPLOYMENT.html  DEPLOYMENT.md  GUIDE.html  README.html  README.md  config.example.yaml  requirements.txt
pihole-mcp-server/config/: loader.py
pihole-mcp-server/connectors/: pihole_client.py  telegram_client.py
pihole-mcp-server/llm/: gemini_agent.py
uptime-synthetics/: README.md  config.example.yaml  deploy_monitor.sh  install_monitor.sh  monitor.py
(+8 files in other folders)
